feat: Scope support for admin and manager, filter testruns based on user groups (#111)
Signed-off-by: nimish22 <24257611+nimish22@users.noreply.github.com>
Co-authored-by: cwrm56 <43615527+cwrm56@users.noreply.github.com>

--- a/Makefile.k8s
+++ b/Makefile.k8s
@@ -151,6 +151,8 @@ mock-jira-deploy: ## Build and deploy mock-jira service
 	@cd mock-jira && docker build -t mock-jira:latest .
 	@echo "📥 Importing mock-jira image into k3d cluster..."
 	@k3d image import mock-jira:latest -c fern-platform
+	@echo "📁 Ensuring namespace exists..."
+	@kubectl create namespace fern-platform 2>/dev/null || echo "✅ Namespace already exists"
 	@echo "☸️ Deploying mock-jira to Kubernetes..."
 	@kubectl apply -f deployments/mock-jira-deployment.yaml
 	@echo "✅ Mock-jira deployed successfully"
